--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data"
+title: "Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data"
 keywords:
   - metabolomics
   - metabolism
