--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -38,13 +38,12 @@ authors:
     orcid: 0000-0002-0313-6646
     email: jane.roe@whatever.edu
     affiliations:
-      - Department of Biochemistry, University of Utah
       - Division of Medical Genetics, Department of Medicine, School of Medicine, University of California San Diego
   -
     name: Yeyun Ouyang
     initials: YO
     orcid: 0000-0001-9523-1044
-    email: jane.roe@whatever.edu
+    email: yeyun.ouyang@biochem.utah.edu
     affiliations:
       - Department of Biochemistry, University of Utah
   -
