--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -47,6 +47,13 @@ authors:
     affiliations:
       - Department of Biochemistry, University of Utah
   -
+    name: Sara M. Nowinski
+    initials: SMN
+    orcid: 
+    email: sara.nowinski@biochem.utah.edu
+    affiliations:
+      - Department of Biochemistry, University of Utah
+  -
     github: ig-ghub
     name: Ian George
     initials: IG
