--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -27,7 +27,7 @@ authors:
     github: zhou325
     name: Youjia Zhou
     initials: YZ
-    orcid:
+    orcid: 0000-0002-4501-8496
     email: zhou325@sci.utah.edu
     affiliations:
       - School of Computing, University of Utah
