--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -82,7 +82,7 @@ authors:
     github: beiwphillips
     name: Bei Wang
     initials: BW
-    orcid:
+    orcid: 0000-0002-9240-0700
     email: beiwang@sci.utah.edu
     affiliations:
       - School of Computing, University of Utah
