Final build for bioRxiv submission

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -30,7 +30,7 @@ authors:
     email: zhou325@sci.utah.edu
     affiliations:
       - School of Computing, University of Utah
-      - Scientific Computing & Imaging Institute, University of Utah
+      - Scientific Computing and Imaging Institute, University of Utah
   -
     github: tcameronwaller
     name: T. Cameron Waller
@@ -85,7 +85,7 @@ authors:
     email: beiwang@sci.utah.edu
     affiliations:
       - School of Computing, University of Utah
-      - Scientific Computing & Imaging Institute, University of Utah
+      - Scientific Computing and Imaging Institute, University of Utah
   -
     name: Jared Rutter<sup>†</sup>
     initials: JR
