--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -70,7 +70,7 @@ authors:
       - Department of Biochemistry, University of Utah
   -
     name: James E. Cox
-    initials: JC
+    initials: JEC
     orcid: 0000-0002-5977-2350
     email: jcox@cores.utah.edu
     affiliations:
