--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data"
+title: "Metaboverse: Metabolic network pattern identification and contextualization within multi-omic data reveal non-canonical signatures of disease"
 keywords:
   - metabolomics
   - metabolism
