--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Metaboverse: Metabolic network pattern identification and contextualization within multi-omic data reveal non-canonical signatures of disease"
+title: "Metaboverse: Metabolic network contextualization in multi-omic datasets reveals disease-relevant signatures"
 keywords:
   - metabolomics
   - metabolism
