--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 **fd8ddf2d-1c36-468b-aa3a-c7eb68c7b06d.zip
-**yeast_correlations_all.tsv
-**yeast_correlations_graph.json
+**_correlations_*.tsv
+**_correlations_*.json
+**clustered.pdf
